--- a/src/Login.css
+++ b/src/Login.css
@@ -11,11 +11,6 @@
     border: 1px solid;
 }
 
-.login-page h1 {
-    margin-top: 0;
-    margin-bottom: 20px;
-}
-
 .login-page .error {
     background-color: #FF4444;
     color: white;
